# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.125 2004/12/16 17:51:22 wolf31o2 Exp $

  16 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  +examples/gamecd.conf.example, -livecd/files/gamecd-xinitrc,
  livecd/runscript/default-runscript.sh,
  livecd/runscript-support/gamecdfs-update.sh,
  livecd/runscript-support/livecdfs-update.sh,
  modules/livecd_stage2_target.py:
  Added gamecd/conf option to livecd_stage2_target.py, added
  gamecd.conf.example to /examples, cleaned up game-specific code in
  gamecdfs-update.sh to make it more generic, added more fundtionality to
  livecdfs-update.sh and default-runscript.sh for gentoo-release-environmental
  and gentoo-gamecd to make spec files simpler and to remove the need for
  specifying a gamecd/environmental fsscript in livecd/fsscript, allowing the
  user to still use a custom fsscript of their own.

  16 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  +livecd/files/environmental.motd.txt,
  targets/livecd-stage1/livecd-stage1.sh:
  Added environmental.motd.txt for gentoo-release-environmental livecd/type.

  15 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/default-runscript.sh,
  livecd/runscript-support/livecdfs-update.sh:
  Added gentoo-release-environmental as a valid livecd/type and did some
  cleanup in livecdfs-update.sh to allow hotplug to dhcp on detected ethernet
  devices other than eth0.

  14 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage1/livecd-stage1-chroot.sh:
  Changed livecd-stage1 to merge each package individually. This should not
  make it into a production version of catalyst, but is here as a possible
  solution to bug #68307.

  12 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/alpha-archscript.sh, livecd/runscript/hppa-archscript.sh,
  livecd/runscript/sparc-archscript.sh,