@@ -1,6 +1,11 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.125 2004/12/16 17:51:22 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.126 2004/12/16 20:01:38 wolf31o2 Exp $
+
+  16 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
+  modules/embedded_target.py, targets/embedded/embedded-fs-runscript.sh,
+  targets/embedded/embedded.sh:
+  Added more embedded updates from mutex@gentoo.org and Closing bug #67289.
 
   16 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
   +examples/gamecd.conf.example, -livecd/files/gamecd-xinitrc,
